2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/app_procs.[ch]
	* app/main.c: initialize the error subsystem after the gimp object
	has been created.

	* app/errors.[ch]: store a reference to the gimp object (eek) and
	use it to call gimp_gui_ungrab() before g_on_error_query().

	* app/core/gimp-gui.[ch]
	* app/gui/gui-vtable.c: added gimp_gui_ungrab().

2006-09-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/emboss.c: hopefully really fixed bug #353227
	this time.

2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: added missing include.

	* app/display/display-enums.[ch]
	* app/dialogs/preferences-dialog.c: changed labels for
	"space-bar-action" preference. Suggestions welcome for further
	improvements.

2006-09-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c
	* plug-ins/pygimp/pygimp-pdb.c: reorder includes to avoid preprocessor
	symbol redefinition warnings.

2006-09-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c
	* plug-ins/pygimp/pygimp-pdb.c: #define NO_IMPORT_PYGOBJECT, so
	the internal pygobject API symbol is only defined once.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: use coordinates from
	the current device when starting to scroll. Grab the keyboard and
	pointer when panning with the space bar.

2006-09-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/text/gimptextlayout-render.c (gimp_text_layout_render_glyphs): 
	handle tabs correctly, as instructed by behdad.  Fixes
	bug #353132.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: added GUI for "space-bar-action".

2006-09-08  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpperspectiveclone.c (gimp_perspective_clone_motion):
	must not clamp the paint area against the boundary of the
	src_tiles. Various small cleanups.

	* app/paint/gimpsourcecore.[ch] (GimpSourceCore::motion): removed
	src_image parameter.
